// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact notes and editing is set to true button message changes to DONE 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Flex
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    value={1}
  >
    <ForwardRef
      autoCorrect={true}
      autoGrow={false}
      blurOnSubmit={false}
      editable={true}
      multiline={true}
      onChangeText={[Function]}
      style={
        Object {
          "borderBottomWidth": 0,
          "color": "#505256",
          "fontSize": 16,
          "marginTop": 30,
          "paddingBottom": 30,
          "paddingHorizontal": 36,
          "textAlign": "left",
        }
      }
    />
  </Flex>
  <BottomButton
    onPress={[Function]}
    text="Done"
  />
</SafeAreaView>
`;

exports[`contact notes icon and prompt are shown if no notes 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <NullStateComponent
    descriptionText="Remember important details about Roger, like favorite food, hobbies they love or something interesting they said."
    headerText="MY NOTES"
    imageSource={
      Object {
        "testUri": "../../../assets/images/myNotes.png",
      }
    }
  />
  <BottomButton
    onPress={[Function]}
    text="ADD PRIVATE NOTES"
  />
</SafeAreaView>
`;

exports[`contact notes icon and prompt are shown if no notes as me 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <NullStateComponent
    descriptionText="Remember important details about your life or spiritual journey, like important milestones, influential people, or things you are learning about God."
    headerText="MY NOTES"
    imageSource={
      Object {
        "testUri": "../../../assets/images/myNotes.png",
      }
    }
  />
  <BottomButton
    onPress={[Function]}
    text="ADD PRIVATE NOTES"
  />
</SafeAreaView>
`;

exports[`contact notes notes are shown 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Flex
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    value={1}
  >
    <ScrollViewMock>
      <MyText
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "#505256",
            "fontSize": 16,
            "marginTop": 30,
            "paddingBottom": 30,
            "paddingHorizontal": 36,
            "textAlign": "left",
          }
        }
      >
        Hello, Roge! Here are some notes.
      </MyText>
    </ScrollViewMock>
  </Flex>
  <BottomButton
    onPress={[Function]}
    text="EDIT PRIVATE NOTES"
  />
</SafeAreaView>
`;
